create inViewModel method for create category

--- a/CashManager/MainWindow.xaml
+++ b/CashManager/MainWindow.xaml
@@ -3,9 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CashManager"
+        xmlns:local="clr-namespace:CashManager.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.DataContext>
+        <local:CategoryViewModel/>
+    </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*"/>
@@ -27,7 +31,26 @@
 
                 <!--Category-->
                 <Grid Grid.Row="2">
-                    <Button >add</Button>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <ListBox ItemsSource="{Binding Categories}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}"></TextBlock>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+
+                    <StackPanel  Grid.Column="1">
+                        <TextBox Text="{Binding NameCategory}"></TextBox>
+                        <TextBox Text="{Binding PriceCategory}"></TextBox>
+                        
+                        <Button Command="{Binding CreateCategory}">add</Button>
+                    </StackPanel>
+                  
                 </Grid>
             </Grid>
         </Grid>
