--- a/CashManager/MainWindow.xaml
+++ b/CashManager/MainWindow.xaml
@@ -5,18 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CashManager.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        >
 
     <Window.DataContext>
         <local:CategoryViewModel/>
     </Window.DataContext>
+    
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.2*"/>
-            <RowDefinition/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="48*"/>
+            <RowDefinition Height="362*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="0,47,0,0" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -26,9 +33,13 @@
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
-                    <RowDefinition/>
                 </Grid.RowDefinitions>
-
+                <Grid>
+                    <StackPanel>
+                        <TextBlock Text="{Binding CurentCategory.Name, Mode=OneWay}"/>
+                        <TextBlock Text="{Binding CurentCategory.Price, Mode=OneWay}"/>
+                    </StackPanel>
+                </Grid>
                 <!--Category-->
                 <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
@@ -36,21 +47,29 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
 
-                    <ListBox ItemsSource="{Binding Categories}">
+                    
+                    
+                    <ListBox ItemsSource="{Binding Categories}" SelectedItem="{Binding CurentCategory}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Name}"></TextBlock>
+                                <Button Command="">
+                                    <TextBlock Text="{Binding Name}"/>
+                                </Button>
+                               
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
 
                     <StackPanel  Grid.Column="1">
-                        <TextBox Text="{Binding NameCategory}"></TextBox>
-                        <TextBox Text="{Binding PriceCategory}"></TextBox>
-                        
-                        <Button Command="{Binding CreateCategory}">add</Button>
+                        <Label>name</Label>
+                        <TextBox Text="{Binding NameCategory, Mode=TwoWay}"></TextBox>
+                        <Label>name</Label>
+                        <TextBox Text="{Binding PriceCategory,Mode=TwoWay}"></TextBox>
+                        <Label>isCosts</Label>
+                        <CheckBox IsChecked="{Binding IsCosts, Mode=TwoWay}"></CheckBox>
+                        <Button Command="{Binding CreateNewCategory}">add</Button>
                     </StackPanel>
-                  
+
                 </Grid>
             </Grid>
         </Grid>
